test_suite/tests/ui/borrow/empty_lifetimes.stderr
error: at least one lifetime must be borrowed
  --> $DIR/empty_lifetimes.rs:12:10
   |
12 | #[derive(Deserialize)]
   |          ^^^^^^^^^^^

error: aborting due to previous error

